# midnight-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
crates/compact/bindgen-macro/: Cargo.toml
crates/compact/bindgen-macro/src/: lib.rs
crates/compact/bindgen-macro/tests/: ui.rs
crates/compact/codegen/: Cargo.toml
crates/compact/codegen/src/: arg_types.rs  lib.rs  types.rs  validate.rs
crates/compact/codegen/src/expand/: circuit_calls.rs  circuits.rs  ledger.rs  mod.rs  types.rs
crates/compact/compact-bindgen/: Cargo.toml
crates/compact/compact-bindgen/src/: lib.rs
crates/compact/compact-runtime/: Cargo.toml
crates/compact/compact-runtime/src/: built_ins.rs  compact_types.rs  error.rs  lib.rs  result.rs  value.rs  witness.rs
crates/compact/interpreter/: Cargo.toml
crates/compact/interpreter/src/: lib.rs
crates/midnight-bindgen/: Cargo.toml
crates/midnight-bindgen-macro/: Cargo.toml
crates/midnight-bindgen-macro/src/: lib.rs
crates/midnight-bindgen-macro/tests/: ui.rs
crates/midnight-bindgen-macro/tests/ui/fail/: malformed-contract-info.rs  malformed-contract-info.stderr  unknown-type-node.rs  unknown-type-node.stderr  version-mismatch.rs  version-mismatch.stderr
crates/midnight-bindgen-macro/tests/ui/fixtures/: malformed.json  version-mismatch.json
crates/midnight-bindgen-macro/tests/ui/pass/: shadowed-runtime-names.rs
crates/midnight-bindgen-runtime/: Cargo.toml
crates/midnight-bindgen-runtime/src/: lazy.rs  lib.rs  reexports.rs
crates/midnight-bindgen/src/: lib.rs
crates/midnight-contract/: Cargo.toml
crates/midnight-contract/examples/: counter.rs
crates/midnight-contract/src/: address.rs  call.rs  contract.rs  deploy.rs  error.rs  interpreter.rs  lib.rs  maintenance.rs  prover.rs  remote_prover.rs  state.rs  zk_config.rs
crates/midnight-contract/tests/: balance_bare_call.rs  circuit_call.rs  e2e_contracts.rs  mint_external_recipient.rs  prove_once_per_call.rs  receive_shielded_coin.rs
crates/midnight-contract/tests/fixtures/: README.md  gateway-mcs.json
crates/midnight-contract/tests/fixtures/gateway/: gateway-core.compact  gateway.compact
crates/midnight-core/: Cargo.toml
crates/midnight-core/src/: lib.rs
crates/midnight-crypto/: Cargo.toml
crates/midnight-crypto/src/: lib.rs
crates/midnight-helpers/: Cargo.toml
crates/midnight-helpers/src/: lib.rs
crates/midnight-indexer-client/: Cargo.toml
crates/midnight-indexer-client/src/: client.rs  error.rs  lib.rs  queries.rs  subscription.rs  testutil.rs  types.rs
crates/midnight-indexer-client/tests/: devnet.rs  subscription_keepalive.rs
crates/midnight-private-state/: Cargo.toml
crates/midnight-private-state/src/: crypto.rs  fs.rs  lib.rs  superjson.rs
crates/midnight-private-state/tests/: fs.rs  interop.rs
crates/midnight-private-state/tests/interop/: .gitignore  README.md  interop.mjs  package.json  pnpm-lock.yaml  regenerate-fixtures.mjs
crates/midnight-private-state/tests/interop/fixtures/: midnight-js-private-state-export.json  midnight-js-signing-key-export.json
crates/midnight-provider/: Cargo.toml
crates/midnight-provider/src/: error.rs  lib.rs  provider.rs  remote_prover.rs  submit.rs  transfer.rs  types.rs
crates/midnight-provider/tests/: bench_lazy_vs_full.rs  devnet.rs  job-map-contract-info.json  lazy_query.rs  lazy_query_bindgen.rs  lock_hygiene.rs  node_e2e.rs  tx_result_wait.rs
crates/midnight-provider/tests/common/: mod.rs
crates/midnight-typed-state/: Cargo.toml
crates/midnight-typed-state/src/: conversions.rs  lib.rs  reexports.rs
crates/midnight-wallet/: Cargo.toml
crates/midnight-wallet/src/: address.rs  background.rs  balance.rs  builder.rs  hd.rs  lib.rs  network.rs  pending.rs  state.rs  storage.rs  transfer.rs
crates/midnight-wallet/tests/: integration.rs  panic_probe.rs
devnet/: docker-compose.yml
examples/contract-maintenance/: Cargo.toml  README.md  docker-compose.yml
examples/contract-maintenance/compiled/keys/: increment_by.prover
examples/contract-maintenance/compiled/zkir/: increment.zkir  increment_by.bzkir  increment_by.zkir
examples/contract-maintenance/src/: main.rs
examples/counter/: Cargo.toml  README.md  counter.compact
examples/counter/compiled/: contract-info.json
examples/counter/compiled/keys/: increment.prover
examples/counter/src/: main.rs
examples/private-state/: Cargo.toml  README.md
examples/private-state/src/: main.rs
examples/shielded-transfer/: Cargo.toml  README.md
examples/shielded-transfer/src/: main.rs
examples/wallet-sync/: Cargo.toml  README.md
examples/wallet-sync/src/: main.rs
tests/conformance/: Cargo.toml  package-lock.json  package.json
tests/conformance/cases-quarantine/: README.md
tests/conformance/cases/bboard/: post-take-down.json
tests/conformance/cases/counter/: increment-twice.json
tests/conformance/cases/ops/: curve.json  field-arith.json  hashes.json  ledger-and-casts.json
tests/conformance/cases/scopes/: read-twice.json
tests/conformance/cases/structs/: hash-odd-widths.json  hash-struct.json
tests/conformance/cases/tiny/: get.json  set-get-clear.json
tests/conformance/cases/vectors/: hash-entries.json
tests/conformance/expected/bboard/: post-take-down.json
tests/conformance/expected/counter/: increment-twice.json
tests/conformance/expected/ops/: curve.json  field-arith.json  hashes.json  ledger-and-casts.json
tests/conformance/expected/scopes/: read-twice.json
tests/conformance/expected/structs/: hash-odd-widths.json  hash-struct.json
tests/conformance/expected/tiny/: get.json  set-get-clear.json
tests/conformance/expected/vectors/: hash-entries.json
tests/conformance/fixtures/ops/: ops.compact
tests/conformance/fixtures/scopes/: scopes.compact
tests/conformance/fixtures/structs/: structs.compact
tests/conformance/fixtures/vectors/: vectors.compact
tests/conformance/src/: lib.rs  report.rs  runner.rs  shape_tests.rs  state_json.rs  tagged.rs
tests/conformance/tests/: harness.rs
tests/conformance/ts-driver/: driver.mjs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
(+116 files in other folders)
