[workspace]
resolver = "2"
members = [
    "crates/midnight-contract",
    "crates/midnight-provider",
    "crates/midnight-indexer-client",
    "crates/midnight-core",
    "crates/midnight-crypto",
    "crates/midnight-private-state",
    "crates/midnight-wallet",
    "crates/midnight-helpers",
    "crates/compact/compact-codegen",
    "crates/midnight-bindgen",
    "crates/midnight-bindgen-macro",
    "crates/midnight-bindgen-runtime",
    "examples/*",
    "tests/integration",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
midnight-indexer-client = { path = "crates/midnight-indexer-client" }
midnight-provider = { path = "crates/midnight-provider" }
midnight-contract = { path = "crates/midnight-contract" }
midnight-core = { path = "crates/midnight-core" }
midnight-crypto = { path = "crates/midnight-crypto" }
midnight-private-state = { path = "crates/midnight-private-state" }
midnight-wallet = { path = "crates/midnight-wallet" }
midnight-helpers = { path = "crates/midnight-helpers" }

# Compact (code generation for Compact smart contracts)
compact-codegen = { path = "crates/compact/compact-codegen" }
midnight-bindgen = { path = "crates/midnight-bindgen" }
midnight-bindgen-macro = { path = "crates/midnight-bindgen-macro" }
midnight-bindgen-runtime = { path = "crates/midnight-bindgen-runtime" }

# External
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-util = "0.7"
futures-util = "0.3"
subxt = "0.50"
jsonrpsee = { version = "0.24", features = ["ws-client"] }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", default-features = false, features = ["std"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
tempfile = "3"

# midnight-ledger ecosystem (all on crates.io as released versions).
midnight-ledger = { version = "=8.1.0", features = ["proving"] }
midnight-onchain-runtime = { version = "=3.1.0" }
midnight-onchain-vm = { version = "=3.1.0" }
midnight-onchain-state = { version = "=3.0.0" }
midnight-serialize = { version = "=1.1.0" }
midnight-transient-crypto = { version = "=2.1.0" }
midnight-base-crypto = { version = "^1.0.0" }
midnight-curves = { version = "^0.2.0" }
midnight-coin-structure = { version = "^2.0.0" }
midnight-storage = { version = "^2.0.1" }

# midnight-node (fork with query_contract_state RPC + ledger helpers)
midnight-rpc-api = { git = "https://github.com/RomarQ/midnight-node.git", rev = "342245db9697625483c261d6bd85b98541e66d4d" }
midnight-node-ledger-helpers = { git = "https://github.com/RomarQ/midnight-node.git", rev = "342245db9697625483c261d6bd85b98541e66d4d" }
