[package]
name = "midnight-bindgen-macro"
description = "Procedural macro for midnight-bindgen contract bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
compact-codegen = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
# The ui tests invoke the macro through the midnight-bindgen facade so the
# generated code's default `midnight_bindgen::...` paths resolve. The cycle is
# dev-only, which cargo allows.
midnight-bindgen = { workspace = true }
trybuild = { workspace = true }
