[package]
name = "midnight-bindgen-runtime"
description = "Runtime library for midnight-bindgen generated contract bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
midnight-serialize = { workspace = true }
midnight-onchain-state = { workspace = true }
midnight-storage = { workspace = true }
midnight-base-crypto = { workspace = true }
midnight-transient-crypto = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
