[package]
name = "midnight-bindgen"
description = "Generate typed Rust bindings from Midnight Compact smart contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
midnight-bindgen-runtime = { workspace = true }
midnight-bindgen-macro = { workspace = true }
# Re-exported as `midnight_bindgen::midnight_contract` so the macro's generated
# code can route `midnight_contract::*` paths through this facade — consumers
# only need to depend on midnight-bindgen, not midnight-contract directly.
midnight-contract = { workspace = true }
