[package]
name = "midnight-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Typed contract state access for Midnight smart contracts"

[dependencies]
midnight-provider = { workspace = true }
midnight-bindgen = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
