[package]
name = "midnight-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Typed contract state access for Midnight smart contracts"

[dependencies]
midnight-provider = { workspace = true }
midnight-bindgen = { workspace = true }
midnight-ledger = { workspace = true }
midnight-onchain-runtime = { workspace = true }
midnight-serialize = { workspace = true }
midnight-base-crypto = { workspace = true }
midnight-coin-structure = { workspace = true }
midnight-transient-crypto = { workspace = true }
midnight-storage = { workspace = true }
midnight-node-ledger-helpers = { workspace = true }
midnight-node-toolkit = { workspace = true }
compact-codegen = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.8"
