[package]
name = "midnight-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Typed contract state access for Midnight smart contracts"

[dependencies]
midnight-provider = { workspace = true }
# midnight-contract uses only the runtime re-exports (ContractState, InMemoryDB,
# StateValue, ContractMaintenanceAuthority, AlignedValue, StorageHashMap,
# StateError). It must NOT depend on midnight-bindgen here, because
# midnight-bindgen re-exports midnight-contract (so its generated code can route
# `midnight_contract::*` paths through `midnight_bindgen::midnight_contract::*`),
# and that would create a cycle. The `contract!` macro is used in the tests below
# via the dev-dependency on midnight-bindgen, which Cargo allows to form a cycle
# only at test-build time.
midnight-bindgen-runtime = { workspace = true }
midnight-wallet = { workspace = true }
midnight-ledger = { workspace = true }
midnight-onchain-runtime = { workspace = true }
midnight-serialize = { workspace = true }
midnight-base-crypto = { workspace = true }
midnight-coin-structure = { workspace = true }
midnight-transient-crypto = { workspace = true }
midnight-storage = { workspace = true }
midnight-helpers = { workspace = true }
compact-codegen = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
# Tests use `midnight_bindgen::contract!` to generate typed bindings against the
# fixture contracts. midnight-bindgen depends on midnight-contract; the cycle is
# fine here because dev-deps are only added to the dep graph when building this
# crate's tests, not when downstream code uses midnight-contract as a lib.
midnight-bindgen = { workspace = true }
