[package]
name = "midnight-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Facade over Midnight's low-level crypto crates (base-crypto, transient-crypto)"

[dependencies]
midnight-base-crypto = { workspace = true }
midnight-transient-crypto = { workspace = true }
