[package]
name = "midnight-helpers"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Thin facade over midnight-node-ledger-helpers. Internal use only — consumers of this workspace import `midnight_helpers` instead of the upstream helpers crate so we can swap or vendor the source in one place."

[dependencies]
midnight-node-ledger-helpers = { workspace = true, features = ["can-panic"] }
# Reach `midnight_ledger::structure::{SPECKS_PER_DUST, STARS_PER_NIGHT}`,
# which upstream-helpers re-exports `MAX_SUPPLY` from but not its two
# siblings. Used only for the constants re-export in lib.rs.
midnight-ledger = { workspace = true }
