[package]
name = "midnight-indexer-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Typed GraphQL client for the Midnight indexer API"

[features]
# Mock `graphql-transport-ws` server helpers (`testutil`) for tests in this
# and downstream crates (midnight-wallet, midnight-provider). Dev-deps only.
test-util = ["tokio/net"]

[dependencies]
futures-util = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Self dev-dependency: enables the `test-util` feature (and with it the
# `testutil` mock-server module) for this crate's own integration tests.
midnight-indexer-client = { path = ".", features = ["test-util"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net"] }
