[package]
name = "midnight-private-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Per-contract private state and signing-key storage with password-encrypted export/import"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
