[package]
name = "midnight-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Provider trait and MidnightProvider for Midnight network interaction"

[features]
default = ["bindgen"]
bindgen = ["dep:midnight-bindgen"]

[dependencies]
midnight-indexer-client = { workspace = true }
midnight-bindgen = { workspace = true, optional = true }
midnight-wallet = { workspace = true }
midnight-rpc-api = { workspace = true }
sp-storage = { workspace = true }
jsonrpsee = { workspace = true }
subxt = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
