[package]
name = "midnight-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Provider trait and MidnightProvider for Midnight network interaction"

[features]
default = ["bindgen"]
# Enables the `lazy::StateQueryProvider` bridge for bindgen-generated code.
# Depends on midnight-bindgen-runtime (not midnight-bindgen) to avoid a cycle:
# midnight-bindgen re-exports midnight-contract, which transitively depends on
# midnight-provider.
bindgen = ["dep:midnight-bindgen-runtime"]

[dependencies]
midnight-indexer-client = { workspace = true }
midnight-bindgen-runtime = { workspace = true, optional = true }
midnight-wallet = { workspace = true }
midnight-private-state = { workspace = true }
midnight-helpers = { workspace = true }
midnight-rpc-api = { workspace = true }
sp-storage = { workspace = true }
jsonrpsee = { workspace = true }
subxt = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# The devnet integration tests (tests/node_e2e.rs, tests/lazy_query.rs) drive
# the bindgen `contract!` macro against compiled fixtures. Cycle (midnight-
# bindgen depends on midnight-provider transitively) is fine because dev-deps
# only join the graph when building this crate's own tests.
midnight-bindgen = { workspace = true }
# `test-util` adds the shared mock-WS server (`testutil`) used by the
# lock-hygiene and sync-cancellation tests (tests/lock_hygiene.rs).
midnight-indexer-client = { workspace = true, features = ["test-util"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
