[package]
name = "midnight-typed-state"
description = "Typed access to Midnight on-chain contract state (ledger-type re-exports, typed accessors, lazy field queries)"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
midnight-serialize = { workspace = true }
midnight-onchain-state = { workspace = true }
midnight-storage = { workspace = true }
midnight-base-crypto = { workspace = true }
midnight-transient-crypto = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
primitive-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
