[package]
name = "midnight-wallet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
midnight-indexer-client = { workspace = true }
midnight-ledger = { version = "=8.0.2", features = ["test-utilities"] }
midnight-node-ledger-helpers = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subxt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
midnight-contract = { workspace = true }
midnight-indexer-client = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
