[package]
name = "example-counter"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
midnight-contract = { workspace = true }
midnight-provider = { workspace = true }
midnight-bindgen = { workspace = true }
midnight-wallet = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
