[package]
name = "example-counter"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
# `midnight_bindgen::contract!` expands into code that names
# `midnight_contract::Contract`, `::Provider`, `::FromHex`, etc. — so the
# generated code only links if the calling crate depends on midnight-contract
# directly. cargo-machete can't see through macro expansion; ignore it there.
midnight-contract = { workspace = true }
midnight-provider = { workspace = true }
midnight-bindgen = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["midnight-contract"]
