[package]
name = "example-shielded-transfer"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
midnight-wallet = { workspace = true }
midnight-provider = { workspace = true }
midnight-helpers = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
