[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
midnight-bindgen = { workspace = true }
midnight-contract = { workspace = true }
midnight-provider = { workspace = true }
hex = { workspace = true }

# Test deps
reqwest = { workspace = true, features = ["blocking"] }
serde_json = { workspace = true }
tokio = { workspace = true }
