[package]
name = "compact-codegen"
description = "Code generation library for Midnight Compact smart contract bindings"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
clap = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
