[package]
name = "compact-bindgen"
description = "Generate typed Rust bindings from Midnight Compact smart contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
midnight-typed-state = { workspace = true }
compact-bindgen-macro = { workspace = true }
# Re-exported as `compact_bindgen::midnight_contract` so the macro's generated
# code can route `midnight_contract::*` paths through this facade — consumers
# only need to depend on compact-bindgen, not midnight-contract directly.
midnight-contract = { workspace = true }
