[package]
name = "compact-interpreter"
description = "Tree-walking interpreter for the Compact circuit-body IR (executes circuits off-chain against contract state)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
compact-codegen = { workspace = true }
compact-runtime = { workspace = true }
midnight-typed-state = { workspace = true }
midnight-onchain-runtime = { workspace = true }
midnight-coin-structure = { workspace = true }
midnight-base-crypto = { workspace = true }
midnight-transient-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
